# data-collector

./: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.rpi  Makefile.toml  README.md  config.toml  datacollector.toml
src/: config.rs  device.rs  main.rs  sensor.rs
