[package]
name = "data-collector"
version = "0.9.0"
authors = ["Timo Kröger <timokroeger93@gmail.com>"]
description = "Configurable Modbus client which sends the collected data to InfluxDB"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
clap = "2"
ctrlc = { version = "3.1", features = ["termination"] }
futures = "0.3"
humantime = "1.2"
isahc = "0.7"
log = "0.4"
modbus = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.7.4"
toml = "0.5"
tokio = { version = "0.2", features = ["macros", "rt-core", "stream", "time"] }
