[package]
name = "data-collector"
version = "0.9.0"
authors = ["Timo Kröger <timokroeger93@gmail.com>"]
description = "Configurable Modbus client which sends the collected data to InfluxDB"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
attohttpc = { version = "0.19.1", default-features = false, features = ["tls"] }
clap = { version = "3.1", features = ["cargo"] }
ctrlc = { version = "3.2", features = ["termination"] }
humantime = "2.1.0"
log = "0.4"
modbus = "1.0"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12.0"
toml = "0.5"
